--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
           <li>91</li>
           <li>92</li>
           <li>93</li>
+          <li>94</li>
+          <li>95</li>
+          <li>96</li>
+          <li>97</li>
+          <li>98</li>
+          <li>99</li>
+          <li>100</li>
+          <li>101</li>
+          <li>102</li>
+   
         </ul>
       </div>
       <div class="stuff">
@@ -112,9 +122,10 @@
               <span class="blue">&lt;</span>cv<span class="blue">&gt;</span>
             </h1>
             <h id="name">Zainab Salah</h>
-            <p>(Web_Developer)</p>
+            <p>(Junior_Web_Developer)</p>
+
           </div>
-          <img src="/11.JPG" alt="this is me" />
+          <img src="./12.JPG" alt="this is me" />
         </header>
 
         <div class="container">
@@ -134,8 +145,23 @@
                 <li>
                   <h3><span class="back-sign">/</span>work experience</h3>
                   <p>
-                    Freelancer at Noor Al Awab Elevators, Escalators &
+                    <b>Freelance programming:</b>
+                    at Noor Al Awab Elevators, Escalators &
                     Hydraulics Co.
+                  </p>
+                  <p>
+                    <b>Data entry & Cashier & Marketing:</b>
+                    <br>
+                    Al-Min & Salwa
+                    <br>
+                    <span class="back-sign">May/2019 – January/2020</span> Baghdad / Palestine street         
+                  </p>
+                  <p>
+                    <b>Cashier & Sells & Customer service:</b>
+                    <br>
+                    Al-Riyad group company for lighting solutions
+                    <br>
+                    <span class="back-sign">January/2019 – August/2021</span> Baghdad / Karrada - Uqba Bin Nafi
                   </p>
                 </li>
                 <li>
@@ -159,6 +185,7 @@
                   <h3>tools & framework</h3>
                   <p>Laravel</p>
                   <p>React.js</p>
+                  <p>Wordpress</p>
                   <p>next.js</p>
                   <p>Vscode</p>
                 </li>
@@ -178,11 +205,14 @@
                 <li>
                   <h3><span class="back-sign">/</span>contact info</h3>
                   <p>email:<a>zainab.salah.m@outlook.com</a></p>
-                  <p>phone :07725765752</p>
-                  <p>address :Baghdad</p>
+                  <p>phone :+90 (552)1500692</p>
+                  <p>address :Avcilar/Istanbul, Turkey</p>
                   <p>
                     github: <a href="https://github.com/kainy01">kainy01</a>
                   </p>
+                  <!-- <p>
+                    CV: <a href="./cv.pdf">Pdf file</a>
+                  </p> -->
                 </li>
                 <li>
                   <h3><span class="back-sign">/</span>education</h3>
@@ -221,6 +251,11 @@
                   <p>implemented by 
                     <span class="back-sign">Science Experts</span> in cooperation with #TheStation, introduction to application development & building app using flutter & dart.</p>
                   </p>
+                  <h5>She codes too bootcamp</h5>
+                  <p>WordPress and softskills, The training includes learning to develop websites using wordpress.<br>Projects:<br>-Dental Reservation Site,
+                    <br>-Women Clothing Store,
+                    <br>-Dental Reservation Site,
+                    <br>-Portfolio Website.</p>
                 </li>
            
               </ul>
